--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <link href="/static/css/styles.css" rel="stylesheet" media="screen">
+    {# <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet"> #}
+    <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/jquery.cookie.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
     <script src="/static/js/app.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
